--- a/css/index.css
+++ b/css/index.css
@@ -16,26 +16,42 @@
  * specific language governing permissions and limitations
  * under the License.
  */
+ .fb-login-in-app{background-image: -webkit-linear-gradient(top, #4867aa, #7b96cf );
+background-image: -moz-linear-gradient(top, #4867aa, #7b96cf );
+background-image: -o-linear-gradient(top, #4867aa, #7b96cf );
+background-image: linear-gradient(top, #4867aa, #7b96cf );
+border: medium none;
+color: #fff;
+line-height: 35px;
+width: 96%;
+font-size: 14px;
+font-weight: 600;
+border-radius: 3px;}
+.fb-login-in-app-new{background-image: -webkit-linear-gradient(top, #535353, #8C8989);
+background-image: -moz-linear-gradient(top, #535353, #8C8989);
+background-image: -o-linear-gradient(top, #535353, #8C8989);
+background-image: linear-gradient(top, #535353, #8C8989);
+border: medium none;
+display: block;
+height: 35px;
+margin: 0 auto;
+width: 96%;
+font-size: 15px;
+font-weight: 600;
+border-radius: 3px;
+color: #fff;}
+.continue-with-current-window{position: absolute;
+top: 22% !important;
+width: 100%;
+padding: 0 8px;
+box-sizing: border-box;
+text-align: center;}
+
 * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
 body {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #A7A7A7),
-        color-stop(0.51, #E4E4E4)
-    );
-    background-attachment:fixed;
     font-family:"Open Sans",Verdana,'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
@@ -46,7 +62,7 @@ body {
 
 .top-slide-with-linking {
     float: left;
-    margin-top: 55px;
+    margin-top: 10px;
     overflow: hidden;
     width: 100%;
 }
@@ -308,10 +324,22 @@ form#login-access-form input {
             #load_light .loading_image img{margin:0 auto!important;padding-left: 5%;}
             .left-icon-area-sec .header-minicart a.skip-cart.no-count {background: rgba(0, 0, 0, 0) none repeat scroll 0 0;}
             .button.search-button .fa.fa-search {    margin-top: 3px;}
-            #load_light .loading_image {    position: absolute;    top: 22% !important; width:100%;padding: 0 8px;box-sizing: border-box;}
+            #load_light .loading_image {    position: absolute;    top: 45% !important; width:100%;padding: 0 8px;box-sizing: border-box;}
             .loading_image span {color: #000!important;display: block;    text-align: center !important;    width: 100%;font-family: Verdana,Arial,sans-serif;font-size: 12px;line-height: 1.5; margin-top:-3px;}
             body .login_access{width:280px !important;  }
             .loader-div{z-index:99;}
             .loader-iframe{z-index:9999;}
             }
-			.progress-bar-validation{position: fixed;top: 45%;left: 27%;}
+			.progress-bar-validation{margin-top:10px;}
+			
+			
+			.continue-with-current-window-container:before{display:table; content:" ";}
+.continue-with-current-window-container:after{display:table;  content:" ";}
+.continue-with-current-window-container:after{clear:both;}
+.continue-with-current-window-container{float: left;
+width: 100%;
+margin-top: 38px;
+text-align: center;
+padding: 0px 8px;
+box-sizing: border-box;}
+
