--- a/css/index.css
+++ b/css/index.css
@@ -342,4 +342,4 @@ margin-top: 38px;
 text-align: center;
 padding: 0px 8px;
 box-sizing: border-box;}
-
+.container-offline {background: #fff ;float: left;height: 100%;left: 0 !important;overflow: hidden;text-align: center;width: 100%; z-index: 9999;top: 25% !important;position: absolute; }
