--- a/css/index.css
+++ b/css/index.css
@@ -343,3 +343,5 @@ text-align: center;
 padding: 0px 8px;
 box-sizing: border-box;}
 .container-offline {background: #fff ;float: left;height: 100%;left: 0 !important;overflow: hidden;text-align: center;width: 100%; z-index: 9999;top: 25% !important;position: absolute; }
+.offline-refresh-button { background-color: #555555;border: none;color: white;padding: 8px 15px;text-align: center;text-decoration: none;
+    display: inline-block;font-size: 14px;margin-top:5px;border-radius: 3px;}
