--- a/css/index.css
+++ b/css/index.css
@@ -401,7 +401,7 @@ box-sizing: border-box;}
 	.as_mrg{margin-right:}
 	.secon_as{list-style:none;width: 52%;float: right;}
 	.secon_as li{display: inline-block;}
-	
+	#MyIFrame{background:red;}
     
    
 	
