--- a/css/index.css
+++ b/css/index.css
@@ -315,6 +315,7 @@ body .header-language-background{background:#333333; z-index:99999; height:47px;
     width: 94%;
 }
             body .header-language-background{background:#000; position:fixed; z-index:99999; height:47px;width:100%; top:0px}
+            .Offline-app-login-window{margin-top:47px;}
             body{margin:0;padding:0;}
             .header-main-part {    background: #333333 none repeat scroll 0 0;    height: auto;}
             .device-logo {    display: none;}
